--- a/CL.ApiWeb/CL.WebApi.csproj
+++ b/CL.ApiWeb/CL.WebApi.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="automapper" Version="11.0.0" />
     <PackageReference Include="automapper.extensions.microsoft.dependencyinjection" Version="11.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
+    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
